Add Jest configuration and setup files for testing; implement ProductImageGallery component with image navigation and error handling; update CatalogItem type to support multiple images; enhance ProductCard layout and styles for improved user experience.

--- a/chupa_workshop/package.json
+++ b/chupa_workshop/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "dependencies": {
     "next": "16.0.10",
@@ -22,8 +23,11 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.2.0",
     "lint-staged": "^16.2.7",
-    "prettier": "^3.7.4"
+    "prettier": "^3.7.4",
+    "ts-jest": "^29.4.6"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,md}": [
