Refactor cart and catalog components to utilize Suspense for loading states; create CartPageClient component for improved cart rendering; update TypeScript configuration to exclude test files for cleaner builds.

--- a/chupa_workshop/tsconfig.json
+++ b/chupa_workshop/tsconfig.json
@@ -30,5 +30,13 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "jest.setup.ts",
+    "jest.setup.tsx",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.spec.ts",
+    "**/*.spec.tsx"
+  ]
 }
