--- a/chupa_workshop/package.json
+++ b/chupa_workshop/package.json
@@ -11,6 +11,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "mobx": "^6.15.0",
+    "mobx-react-lite": "^4.1.1",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
