Remove ESLint and Prettier configuration files, update Prettier settings in .prettierrc, and enhance ESLint configuration in eslint.config.mjs to integrate Prettier and improve linting rules. Update package dependencies for ESLint and Prettier, and refine VSCode settings for better development experience. Additionally, clean up project documentation and improve API error handling in various modules.

--- a/chupa_workshop/.vscode/settings.json
+++ b/chupa_workshop/.vscode/settings.json
@@ -1,11 +1,22 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescriptreact]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.words": ["CDEK"]
+  "prettier.requireConfig": true,
+  "typescript.format.enable": false,
+  "javascript.format.enable": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit"
+  }
 }
