--- a/chupa_workshop/.prettierrc
+++ b/chupa_workshop/.prettierrc
@@ -1,8 +1,8 @@
 {
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "printWidth": 100,
   "tabWidth": 2,
-  "endOfLine": "lf"
+  "arrowParens": "always"
 }
