Update ESLint configuration and Prettier settings: introduce new eslint.config.js for enhanced linting rules, remove outdated eslint.config.mjs, and update .prettierrc to use tabs. Adjust package dependencies for ESLint and Prettier, and refine VSCode settings for improved development experience. Add tsconfig.eslint.json for TypeScript support in ESLint.

--- a/chupa_workshop/.vscode/settings.json
+++ b/chupa_workshop/.vscode/settings.json
@@ -1,22 +1,27 @@
 {
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[javascriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"editor.formatOnSave": false,
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": "explicit",
+  "source.organizeImports": "explicit"
+	},
+	"eslint.validate": ["javascript", "typescript", "typescriptreact", "javascriptreact"],
+	"prettier.requireConfig": true,
+
+	"[javascript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
   "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
   "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
-  "prettier.requireConfig": true,
-  "typescript.format.enable": false,
-  "javascript.format.enable": false,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
-  }
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+
+		"eslint.useFlatConfig": true,
+  "eslint.workingDirectories": [{ "mode": "auto" }],
 }
+
