--- a/chupa_workshop/package.json
+++ b/chupa_workshop/package.json
@@ -23,15 +23,18 @@
   "devDependencies": {
     "@types/node": "25.0.1",
     "@types/react": "19.2.7",
+    "@typescript-eslint/eslint-plugin": "^8.53.1",
+    "@typescript-eslint/parser": "^8.53.1",
     "eslint": "^9.39.2",
-    "eslint-config-next": "^16.0.10",
-    "eslint-config-prettier": "^10.1.8",
+    "eslint-config-next": "^16.1.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.5.5",
+    "globals": "^17.0.0",
     "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "lint-staged": "^16.2.7",
-    "prettier": "3.8.1",
+    "prettier": "^3.8.1",
     "ts-jest": "^29.4.6"
   },
   "lint-staged": {
