--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,13 @@
   },
 
 		"eslint.useFlatConfig": true,
-  "eslint.workingDirectories": [{ "mode": "auto" }],
+  "eslint.workingDirectories": [
+    {
+      "mode": "auto"
+    }
+  ],
+  "cSpell.words": [
+    "chupa"
+  ],
 }
 
