--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chupa_workshop",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -24,6 +25,10 @@
   "devDependencies": {
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "25.0.1",
     "@types/react": "19.2.7",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
