--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,11 +1,12 @@
 {
 	"extends": "./tsconfig.json",
 	"include": [
-			"src",
-			"eslint.config.js",
-			"jest.config.ts",
-			"prettier.config.js",
-			"**/*.test.ts",
-			"**/*.test.tsx"
-	]
+    	"src/**/*.ts",
+    	"src/**/*.tsx",
+    	"src/**/*.test.ts",
+    	"src/**/*.test.tsx",
+    	"eslint.config.js",
+    	"jest.config.ts",
+    	"prettier.config.js"
+  ]
 }
