--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -7,6 +7,8 @@
     	"src/**/*.test.tsx",
     	"eslint.config.js",
     	"jest.config.ts",
-    	"prettier.config.js"
+    	"prettier.config.js",
+		"postcss.config.js",
+		"tailwind.config.js"
   ]
 }
