feat: integrate photo swipe for enhanced image gallery functionality
- Added PhotoSwipe and react-photoswipe-gallery dependencies for improved image viewing experience.
- Updated ProductImageGallery component to utilize PhotoSwipe for image display.
- Enhanced product data to include additional images for better visual representation.
- Refactored CSS styles for the image gallery to streamline layout and responsiveness.

--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
     "next": "16.0.10",
+    "photoswipe": "^5.4.4",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-photoswipe-gallery": "^4.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.1.0",
