feat: integrate supabase
- Added Supabase client integration for fetching products and handling catalog operations.
- Refactored product retrieval logic to utilize Supabase, improving data management and filtering capabilities.
- Updated product schema to align with Supabase structure, including new fields for better categorization.
- Removed outdated product schema and related files to streamline the codebase.
- Enhanced catalog filters and search parameters for improved user experience.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,22 @@
     }
   ],
   "cSpell.words": [
-    "chupa"
+    "Выберите",
+    "Загрузка",
+    "изделия",
+    "Материал",
+    "Платформа",
+    "платформу",
+    "Превращаем",
+    "Применить",
+    "пустые",
+    "Сбросить",
+    "строки",
+    "Фильтрация",
+    "Цена",
+    "chupa",
+    "ilike",
+    "supabase"
   ],
 }
 
